--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.19",
     "@ai-sdk/openai": "^1.3.22",
     "@assistant-ui/react": "^0.10.9",
     "@assistant-ui/react-ai-sdk": "^0.10.9",
     "@assistant-ui/react-markdown": "^0.10.3",
+    "@clerk/nextjs": "^6.22.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -24,8 +26,10 @@
     "next": "15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.0"
   },
   "devDependencies": {
